got/Gotparser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | FLOAT
  13      | VOID
  14      | STRING

  15  vdecl_list :
  16             | vdecl_list vdecl

  17  vdecl : typ ID SEMI

  18  stmt_list :
  19            | stmt_list stmt

  20  stmt : expr SEMI
  21       | RETURN expr_opt SEMI
  22       | LBRACE stmt_list RBRACE
  23       | IF LPAREN expr RPAREN stmt
  24       | IF LPAREN expr RPAREN stmt ELSE stmt
  25       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  26       | WHILE LPAREN expr RPAREN stmt

  27  expr_opt :
  28           | expr

  29  expr : LITERAL
  30       | FLIT
  31       | BLIT
  32       | ID
  33       | STR_LITERAL
  34       | expr PLUS expr
  35       | expr MINUS expr
  36       | expr TIMES expr
  37       | expr DIVIDE expr
  38       | expr EQ expr
  39       | expr NEQ expr
  40       | expr LT expr
  41       | expr LEQ expr
  42       | expr GT expr
  43       | expr GEQ expr
  44       | expr AND expr
  45       | expr OR expr
  46       | MINUS expr
  47       | NOT expr
  48       | ID ASSIGN expr
  49       | ID LPAREN args_opt RPAREN
  50       | LPAREN expr RPAREN

  51  args_opt :
  52           | args_list

  53  args_list : expr
  54            | args_list COMMA expr

  55  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (55)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (55)

	.  reduce 55


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	EOF  shift 10
	.  error

	vdecl  goto 11
	fdecl  goto 12
	typ  goto 13


state 5
	typ : INT .  (10)

	.  reduce 10


state 6
	typ : BOOL .  (11)

	.  reduce 11


state 7
	typ : FLOAT .  (12)

	.  reduce 12


state 8
	typ : VOID .  (13)

	.  reduce 13


state 9
	typ : STRING .  (14)

	.  reduce 14


state 10
	program : decls EOF .  (1)

	.  reduce 1


state 11
	decls : decls vdecl .  (3)

	.  reduce 3


state 12
	decls : decls fdecl .  (4)

	.  reduce 4


state 13
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ . ID SEMI  (17)

	ID  shift 14
	.  error


state 14
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (17)

	SEMI  shift 15
	LPAREN  shift 16
	.  error


state 15
	vdecl : typ ID SEMI .  (17)

	.  reduce 17


state 16
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	RPAREN  reduce 6

	typ  goto 17
	formals_opt  goto 18
	formal_list  goto 19


state 17
	formal_list : typ . ID  (8)

	ID  shift 20
	.  error


state 18
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 21
	.  error


state 19
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 22
	RPAREN  reduce 7


state 20
	formal_list : typ ID .  (8)

	.  reduce 8


state 21
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 23
	.  error


state 22
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	.  error

	typ  goto 24


state 23
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (15)

	.  reduce 15

	vdecl_list  goto 25


state 24
	formal_list : formal_list COMMA typ . ID  (9)

	ID  shift 26
	.  error


state 25
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (16)
	stmt_list : .  (18)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	LPAREN  reduce 18
	LBRACE  reduce 18
	RBRACE  reduce 18
	MINUS  reduce 18
	NOT  reduce 18
	RETURN  reduce 18
	IF  reduce 18
	FOR  reduce 18
	WHILE  reduce 18
	LITERAL  reduce 18
	BLIT  reduce 18
	ID  reduce 18
	FLIT  reduce 18
	STR_LITERAL  reduce 18

	vdecl  goto 27
	typ  goto 28
	stmt_list  goto 29


state 26
	formal_list : formal_list COMMA typ ID .  (9)

	.  reduce 9


state 27
	vdecl_list : vdecl_list vdecl .  (16)

	.  reduce 16


state 28
	vdecl : typ . ID SEMI  (17)

	ID  shift 30
	.  error


state 29
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (19)

	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 33
	MINUS  shift 34
	NOT  shift 35
	RETURN  shift 36
	IF  shift 37
	FOR  shift 38
	WHILE  shift 39
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	stmt  goto 45
	expr  goto 46


state 30
	vdecl : typ ID . SEMI  (17)

	SEMI  shift 15
	.  error


state 31
	expr : LPAREN . expr RPAREN  (50)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 47


state 32
	stmt : LBRACE . stmt_list RBRACE  (22)
	stmt_list : .  (18)

	.  reduce 18

	stmt_list  goto 48


state 33
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (5)

	.  reduce 5


state 34
	expr : MINUS . expr  (46)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 49


state 35
	expr : NOT . expr  (47)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 50


state 36
	stmt : RETURN . expr_opt SEMI  (21)
	expr_opt : .  (27)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	SEMI  reduce 27

	expr  goto 51
	expr_opt  goto 52


state 37
	stmt : IF . LPAREN expr RPAREN stmt  (23)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (24)

	LPAREN  shift 53
	.  error


state 38
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (25)

	LPAREN  shift 54
	.  error


state 39
	stmt : WHILE . LPAREN expr RPAREN stmt  (26)

	LPAREN  shift 55
	.  error


state 40
	expr : LITERAL .  (29)

	.  reduce 29


state 41
	expr : BLIT .  (31)

	.  reduce 31


state 42
	expr : ID .  (32)
	expr : ID . ASSIGN expr  (48)
	expr : ID . LPAREN args_opt RPAREN  (49)

	LPAREN  shift 56
	ASSIGN  shift 57
	SEMI  reduce 32
	RPAREN  reduce 32
	COMMA  reduce 32
	PLUS  reduce 32
	MINUS  reduce 32
	TIMES  reduce 32
	DIVIDE  reduce 32
	EQ  reduce 32
	NEQ  reduce 32
	LT  reduce 32
	LEQ  reduce 32
	GT  reduce 32
	GEQ  reduce 32
	AND  reduce 32
	OR  reduce 32


state 43
	expr : FLIT .  (30)

	.  reduce 30


state 44
	expr : STR_LITERAL .  (33)

	.  reduce 33


state 45
	stmt_list : stmt_list stmt .  (19)

	.  reduce 19


state 46
	stmt : expr . SEMI  (20)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	SEMI  shift 58
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	AND  shift 69
	OR  shift 70
	.  error


state 47
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : LPAREN expr . RPAREN  (50)

	RPAREN  shift 71
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	AND  shift 69
	OR  shift 70
	.  error


state 48
	stmt_list : stmt_list . stmt  (19)
	stmt : LBRACE stmt_list . RBRACE  (22)

	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 72
	MINUS  shift 34
	NOT  shift 35
	RETURN  shift 36
	IF  shift 37
	FOR  shift 38
	WHILE  shift 39
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	stmt  goto 45
	expr  goto 46


state 49
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : MINUS expr .  (46)

	.  reduce 46


state 50
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : NOT expr .  (47)

	.  reduce 47


state 51
	expr_opt : expr .  (28)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	AND  shift 69
	OR  shift 70
	SEMI  reduce 28
	RPAREN  reduce 28


state 52
	stmt : RETURN expr_opt . SEMI  (21)

	SEMI  shift 73
	.  error


state 53
	stmt : IF LPAREN . expr RPAREN stmt  (23)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (24)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 74


state 54
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (25)
	expr_opt : .  (27)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	SEMI  reduce 27

	expr  goto 51
	expr_opt  goto 75


state 55
	stmt : WHILE LPAREN . expr RPAREN stmt  (26)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 76


state 56
	expr : ID LPAREN . args_opt RPAREN  (49)
	args_opt : .  (51)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	RPAREN  reduce 51

	expr  goto 77
	args_opt  goto 78
	args_list  goto 79


state 57
	expr : ID ASSIGN . expr  (48)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 80


state 58
	stmt : expr SEMI .  (20)

	.  reduce 20


state 59
	expr : expr PLUS . expr  (34)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 81


state 60
	expr : expr MINUS . expr  (35)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 82


state 61
	expr : expr TIMES . expr  (36)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 83


state 62
	expr : expr DIVIDE . expr  (37)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 84


state 63
	expr : expr EQ . expr  (38)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 85


state 64
	expr : expr NEQ . expr  (39)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 86


state 65
	expr : expr LT . expr  (40)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 87


state 66
	expr : expr LEQ . expr  (41)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 88


state 67
	expr : expr GT . expr  (42)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 89


state 68
	expr : expr GEQ . expr  (43)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 90


state 69
	expr : expr AND . expr  (44)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 91


state 70
	expr : expr OR . expr  (45)

	LPAREN  shift 31
	MINUS  shift 34
	NOT  shift 35
	LITERAL  shift 40
	BLIT  shift 41
	ID  shift 42
	FLIT  shift 43
	STR_LITERAL  shift 44
	.  error

	expr  goto 92


state 71
	expr : LPAREN expr RPAREN .  (50)

	.  reduce 50


state 72
	stmt : LBRACE stmt_list RBRACE .  (22)

	.  reduce 22


state 73
	stmt : RETURN expr_opt SEMI .  (21)

	.  reduce 21


state 74
	stmt : IF LPAREN expr . RPAREN stmt  (23)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (24)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	RPAREN  shift 93
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	AND  shift 69
	OR  shift 70
	.  error


state 75
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (25)

	SEMI  shift 94
	.  error


state 76
	stmt : WHILE LPAREN expr . RPAREN stmt  (26)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	RPAREN  shift 95
	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	AND  shift 69
	OR  shift 70
	.  error


state 77
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	args_list : expr .  (53)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	AND  shift 69
	OR  shift 70
	RPAREN  reduce 53
	COMMA  reduce 53


state 78
	expr : ID LPAREN args_opt . RPAREN  (49)

	RPAREN  shift 96
	.  error


state 79
	args_opt : args_list .  (52)
	args_list : args_list . COMMA expr  (54)

	COMMA  shift 97
	RPAREN  reduce 52


state 80
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : ID ASSIGN expr .  (48)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	AND  shift 69
	OR  shift 70
	SEMI  reduce 48
	RPAREN  reduce 48
	COMMA  reduce 48


state 81
	expr : expr . PLUS expr  (34)
	expr : expr PLUS expr .  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	TIMES  shift 61
	DIVIDE  shift 62
	SEMI  reduce 34
	RPAREN  reduce 34
	COMMA  reduce 34
	PLUS  reduce 34
	MINUS  reduce 34
	EQ  reduce 34
	NEQ  reduce 34
	LT  reduce 34
	LEQ  reduce 34
	GT  reduce 34
	GEQ  reduce 34
	AND  reduce 34
	OR  reduce 34


state 82
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr MINUS expr .  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	TIMES  shift 61
	DIVIDE  shift 62
	SEMI  reduce 35
	RPAREN  reduce 35
	COMMA  reduce 35
	PLUS  reduce 35
	MINUS  reduce 35
	EQ  reduce 35
	NEQ  reduce 35
	LT  reduce 35
	LEQ  reduce 35
	GT  reduce 35
	GEQ  reduce 35
	AND  reduce 35
	OR  reduce 35


state 83
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr TIMES expr .  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 36


state 84
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr DIVIDE expr .  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 37


state 85
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr EQ expr .  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	SEMI  reduce 38
	RPAREN  reduce 38
	COMMA  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	AND  reduce 38
	OR  reduce 38


state 86
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr NEQ expr .  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 59
	MINUS  shift 60
	TIMES  shift 61
	DIVIDE  shift 62
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	SEMI  reduce 39
	RPAREN  reduce 39
	COMMA  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	AND  reduce 39
	OR  reduce 39


state 87
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr LT expr .  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
